--- a/Feel/wwwroot/css/style.scss
+++ b/Feel/wwwroot/css/style.scss
@@ -56,6 +56,7 @@ input[type=number] {
 @import "partials/_recap.scss";
 @import "partials/_filter.scss";
 @import "partials/_setup.scss";
+@import "partials/_localization.scss";
 // Classe con tutti gli elementi da aggiornare con i temi
 @import "partials/_allElements.scss";
 
