--- a/Feel/wwwroot/css/style.css
+++ b/Feel/wwwroot/css/style.css
@@ -495,10 +495,21 @@ main .main-section {
   font-size: 0.8rem;
   color: limegreen;
 }
+.setup-page .setup-recap {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.setup-page .setup-recap .section {
+  border: 1px solid #6c757d;
+  padding: 1rem;
+  box-shadow: 2px 2px 5px rgba(100, 100, 100, 0.3);
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.setup-page .setup-recap .section img {
+  max-height: 150px;
+}
 
-/*& input[type="text"] {
-    border: 1px solid red;
-}*/
 .assistente.autunno {
   position: fixed;
   z-index: 14;
