--- a/Feel/Components/Form/FormLayout.razor
+++ b/Feel/Components/Form/FormLayout.razor
@@ -14,7 +14,7 @@
             </div>
             <div class="@($"modal-footer {MainTheme}")">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
-                <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
+                <button type="submit" class="@($"btn btn-{MainTheme}-feel-light text-{MainTheme}-feel-primary")">@SubmitText</button>
             </div>
         </EditForm>
     }
@@ -29,7 +29,7 @@
             </div>
             <div class="@($"modal-footer {MainTheme}")">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
-                <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
+                <button type="submit" class="@($"btn btn-{MainTheme}-feel-light text-{MainTheme}-feel-primary")">@SubmitText</button>
             </div>
         </EditForm>
     }
@@ -46,7 +46,7 @@
                 @if(UpdateModelCheckValidation)
                 {                    
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@CloseText</button>
-                <button type="submit" class="@($"btn btn-{MainTheme}-feel-ligh text-{MainTheme}-feel-primary")">@SubmitText</button>
+                <button type="submit" class="@($"btn btn-{MainTheme}-feel-light text-{MainTheme}-feel-primary")">@SubmitText</button>
                 }
                 else
                 {
