--- a/Feel/wwwroot/css/partials/_setup.scss
+++ b/Feel/wwwroot/css/partials/_setup.scss
@@ -1,15 +1,4 @@
-﻿.setup-page {
-    width: 100vw;
-    height: 100vh;
-    padding: 10rem 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 4rem;
-    background: linear-gradient(135deg, #f0ffd6 0%, #ffffff 100%);
-    @include appear-and-resize(3s);
-
-
+﻿@mixin setup() {    
     & .descrizione {
         display: flex;
         flex-direction: column;
@@ -149,4 +138,21 @@
             }
         }
     }
+}
+
+.setup-page {
+    width: 100vw;
+    height: 100vh;
+    padding: 10rem 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 4rem;
+    background: linear-gradient(135deg, #f0ffd6 0%, #ffffff 100%);
+    @include appear-and-resize(3s);
+    @include setup();
+}
+
+.options {
+    @include setup();
 }
