--- a/Feel/Components/ProgressCard.razor
+++ b/Feel/Components/ProgressCard.razor
@@ -3,8 +3,14 @@
 
 @if(Obiettivo is not null)
 {   
+    string isDeleteObiettiviChecked = DeleteObiettivoToggle ? "col-6" : "col-7";
+
     <div class="col recap-box">
         <div class="@($"row progress-bar-section {MainTheme} {IsCompleted}")">
+            @if(DeleteObiettivoToggle)
+            {
+                <Modal ModalType="ModalType.DeleteObietttivo" ModalId="@Obiettivo.Id" OnActionClick="() => DeleteObiettivo(Obiettivo.Id)"/>
+            }
             <div class="col-3 progress-bar-bottle-container">
                 <div class="@($"progress-card {MainTheme}")">
                     <div class="bottle rounded-pill">
@@ -13,7 +19,7 @@
                     <span class="@($"percentuale {MainTheme}")">@($"{Obiettivo.Percentage}%")</span>
                 </div>
             </div>
-            <div class="col-7 progress-bar-recap">
+            <div class="@($"{isDeleteObiettiviChecked} progress-bar-recap")">
                 <span>@HelperTraduzione.Traduzione(Obiettivo.Categoria, Localizer)</span>
                 <span>@Obiettivo?.Titolo</span>
                 @if(Obiettivo.Completed)
