--- a/Feel/Components/ProgressCard.razor
+++ b/Feel/Components/ProgressCard.razor
@@ -32,7 +32,7 @@
                 }
         </div>
         <Modal ModalType="ModalType.EditObiettivo" OnActionClick="Action" ModalId="@Obiettivo.Id">
-        <UpdateObiettivo @ref="_updateObiettivo" ObiettivoId="@Obiettivo.Id"/>
+        <UpdateObiettivo @ref="_updateObiettivo" Obiettivo="@Obiettivo"/>
         </Modal>
     </div>
 </div>
