--- a/Feel/Pages/DashBoard.razor
+++ b/Feel/Pages/DashBoard.razor
@@ -23,7 +23,7 @@
         }
     </div>
     <div class="row">
-        <div class="col-2"><button class="btn btn-danger" @onclick="_progressCard.ShowDeleteObiettivi">@Localizer[ResourceLanguage.EliminaObiettivi]</button></div>
+        <div class="col-2"><button class="btn btn-danger">@Localizer[ResourceLanguage.EliminaObiettivi]</button></div>
     </div>
 </div>
 
