--- a/Feel/wwwroot/css/partials/_modal.scss
+++ b/Feel/wwwroot/css/partials/_modal.scss
@@ -7,3 +7,18 @@
     background-color: $primary !important;
 }
 
+@mixin modal-delete() {
+    
+width: 100%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: $danger;
+
+}
+
+
+.progress-card-delete {
+@include modal-delete();
+}
