--- a/Feel/Components/Assistant/AssistantMessage.razor
+++ b/Feel/Components/Assistant/AssistantMessage.razor
@@ -1,4 +1,5 @@
-﻿@using Feel.Components.Obiettivo
+﻿@using Feel.Components.AssistantChoices
+@using Feel.Components.Obiettivo
 <div @onclick="Action">
 
     @if(AssistantChoice is ModalType.AggiungiObiettivo)
@@ -8,6 +9,13 @@
         </Modal>
 
 }
+    @if (AssistantChoice is ModalType.CambiaTema)
+    {
+        <Modal ActionClass="@ActionClass" CssClass="@CssClass" ActionText="@ActionText" ModalType="AssistantChoice" ModalId="@ModalId">
+            <ChangeTheme @ref="_changeTheme" ModalId="@ModalId" />
+        </Modal>
+
+    }
 </div>
 
 
