--- a/Feel/wwwroot/css/style.scss
+++ b/Feel/wwwroot/css/style.scss
@@ -57,6 +57,7 @@ input[type=number] {
 @import "partials/_filter.scss";
 @import "partials/_setup.scss";
 @import "partials/_localization.scss";
+@import "partials/_userSettings.scss";
 // Classe con tutti gli elementi da aggiornare con i temi
 @import "partials/_allElements.scss";
 
