--- a/Feel/Components/AssistantChoices/About.razor
+++ b/Feel/Components/AssistantChoices/About.razor
@@ -1,1 +1,18 @@
 ﻿@inherits MainClassBase
+
+
+@if (UserSettingsEdit is not null)
+{
+    <FormLayout UpdateModelUser="@UserSettingsEdit" OnSubmit="Close" IsSave="false">
+        <div class="col-12">
+<div class="row">
+    <div class="col-4">
+<img src="/css/images/funko_jack.png" class="rounded-5" style="max-width: 100px;"/>
+    </div>
+                <div class="col-8 d-flex align-items-center">
+                <span class="@($"text-{MainTheme}-feel-light")" style="font-size: 0.7rem;"><strong>Giacomo Rossettini</strong> - 2025</span>
+                </div>
+</div>
+        </div>      
+    </FormLayout>
+}
